# egui

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  GEMINI.md  INIT.md  README.md  WASM_DEPLOYMENT.md  fix_pyscript.py  index.html  index.html.bak  launch-core.sh  launch-demo.sh  launch-docs.sh  launch-framework.sh  launch-matchbox-app.sh  launch-matchbox-docs.sh  launch-matchbox-net.sh  launch-matchbox-server.sh  launch-matchbox-wasm.sh  launch-web.sh  mkdocs.yml  run_server.sh
.github/: copilot-instructions.md
.openhands/: TASKS.md  config.toml
.openhands/microagents/: egui-core.md  egui-demo.md  egui-docs.md  egui-framework.md  egui-web.md
crates/egui_demo_app/: Cargo.toml
crates/egui_demo_lib/: Cargo.toml
docs/: qwen.md
egui-matchbox-chat-app/: Cargo.toml
egui-matchbox-chat-app/src/: main.rs  networking.rs
examples/egui-matchbox-chat/: Cargo.toml
examples/egui-matchbox-chat/src/: main.rs  networking.rs
examples/matchbox_p2p/: ADVANCED_GUIDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  README_ENHANCED.md  Trunk.toml  docker-compose.yml  index.html  nginx.conf
examples/matchbox_p2p/scripts/: test_enhanced.sh
examples/matchbox_p2p/src/: enhanced_main.rs  enhanced_network.rs  main.rs  network.rs
examples/p2p-chat/: Cargo.toml
site/: 404.html  index.html
site/architecture/: index.html
site/changelog/: index.html
site/code_of_conduct/: index.html
site/contributing/: index.html
site/qwen/: index.html
site/releases/: index.html
src/: lib.rs  main.rs  networking.rs
web_demo/: index.html  multiple_apps.html
(+17 files in other folders)
