
[package]
name = "egui-matchbox-net"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
matchbox_socket = { version = "0.10", features = ["ggrs"] }
serde = { version = "1.0", features = ["derive"] }
egui = "0.32"

[lib]
path = "src/lib.rs"

[[bin]]
name = "egui-chat"
path = "src/main.rs"
