
[package]
name = "egui_matchbox_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
matchbox_socket = "0.7.0"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
tracing-wasm = "0.2"
web-sys = "0.3"

