[package]
name = "matchbox_p2p"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
eframe = { workspace = true, features = ["wgpu"] }
egui = { workspace = true }
matchbox_socket = { version = "0.12", features = ["ggrs"] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = "0.3"
tracing-wasm = "0.2"

[[bin]]
name = "matchbox_p2p"
path = "src/main.rs"